# platform.core.multimedia.alsa-scenario-0.2

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NOTES  TODO  configure  configure.in  project.config
debian/: changelog  control  copyright  libascenario-0.postinst  libascenario-dev.install.in  rules
examples/: Makefile.am  Makefile.in  alsa-scn.c  default.conf  dump.c  sequence
include/: Makefile.am  Makefile.in  ascenario.h  config.h.in
packaging/: alsa-scenario.changes  alsa-scenario.spec
pkgconfig/: Makefile.am  Makefile.in  libascenario.pc.in
src/: Makefile.am  Makefile.in  ascenario.c
